# dungeon-engine

./: .gitignore  AGENTS.md  AUTHORING_GUIDE.md  CHANGELOG.md  CONTENT_TYPES.md  CONTRIBUTING.md  DUNGEON ENGINE LOGO.aseprite  ENGINE_JSON_INTERFACE.md  KNOWN_ISSUES.md  MANUAL.md  PROJECT_SPIRIT.md  README.md  Run_Editor.cmd  Run_Game.cmd  Run_Game_Fast.cmd  Run_Python_Puzzle.cmd  STATUS.md  architecture.md  functionality.md  main.py  mkdocs.yml  pyproject.toml  roadmap.md  run_editor.py  run_game.py
archive/: ARCHITECTURE.md  CONTENT_TYPES.md  CONTRIBUTING.md  MANUAL.md  ROADMAP.md  STATUS.md
archived_editor/: README.md  Run_Editor.cmd  run_editor.py
docs/: index.md
dungeon_engine/: __init__.py  authored_command_validation.py  config.py  dialogue_library.py  inventory.py  items.py  json_io.py  launcher_state.py  logging_utils.py  project.py  project_context.py  startup_validation.py
plans/: area_state_and_cross_area_design.md  asset_registry_ideas.md  codebase_health_fixes.md  codebase_refactor_and_docs_catchup_plan.md  command_runner_and_tick_refactor.md  command_system_rework.md  concrete-comprehensive-roadmap.md  content_type_id_system.md  deprecations_future.md  dialogue_authoring_editor_plan.md  dialogue_choice_authoring_model.md  dialogue_editor_tab_mockup.html  dialogue_ui_rework_direction.md  documentation_followup_questions.md  documentation_inventory_and_truth_map.md  dot_notation_future_spec.md  editor-runtime-parity-backlog.md  editor_entity_workflow_ux_plan.md  editor_entity_workflow_ux_plan_v2.md  editor_overhaul_gid_tilemap.md  inventory_v1_plan.md  (+10 more)
(+672 files in other folders)
