[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-dungeon-engine"
version = "0.1.0"
description = "A command-driven top-down RPG/puzzle engine built with pygame-ce."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "json5>=0.9,<1",
    "pygame-ce>=2.5.2,<3.0.0",
]

[tool.setuptools.packages.find]
include = ["dungeon_engine*"]

